--- a/src/pages/PortfolioOverview.module.scss
+++ b/src/pages/PortfolioOverview.module.scss
@@ -7,3 +7,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
