--- a/src/components/ActiveTable.module.scss
+++ b/src/components/ActiveTable.module.scss
@@ -1,66 +1,70 @@
 .table {
+  width: 100%;
+  margin-top: 20px;
+
+  table {
     width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  
-    th,
-    td {
-      padding: 12px;
-      text-align: left;
-      border: 1px solid #ddd;
-    }
-  
-    th {
-      background-color: #f4f4f4;
-      font-weight: bold;
-      color: #333;
-    }
-  
-    td {
-      color: #555;
-    }
-  
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-  
-    tr:hover {
-      background-color: #f1f1f1;
-      cursor: pointer;
-    }
-  
-    .portfolioShare {
-      color: green;
-      font-weight: bold;
-    }
-  
-    .negativeChange {
-      color: red;
-      font-weight: bold;
-    }
-  
-    .positiveChange {
-      color: green;
-      font-weight: bold;
-    }
   }
-  
-  .table-wrapper {
-    overflow-x: auto;
-    margin-top: 20px;
+
+  th,
+  td {
+    padding: 12px;
+    text-align: left;
+    width: 15%;
   }
-  
-  .table th,
-  .table td {
-    white-space: nowrap;
+
+  th {
+    font-weight: bold;
+    color: #333;
   }
-  
-  .table th {
-    background-color: #f9f9f9;
-  }
-  
-  .table .portfolioShare {
+
+  .portfolioShare {
     color: green;
     font-weight: bold;
   }
-  
+
+  .negativeChange {
+    color: red;
+    font-weight: bold;
+  }
+
+  .positiveChange {
+    color: green;
+    font-weight: bold;
+  }
+}
+
+.table-wrapper {
+  overflow-x: auto;
+  margin-top: 20px;
+}
+
+.table th,
+.table td {
+  white-space: nowrap;
+}
+
+.table th {
+  background-color: #f9f9f9;
+}
+
+.table .portfolioShare {
+  color: green;
+  font-weight: bold;
+}
+
+.tableRow {
+  width: 100%;
+  tbody > tr {
+    width: 100%;
+    cursor: pointer;
+  }
+  tbody > tr:hover {
+    background-color: #ffffff;
+  }
+  tbody > tr > td {
+    padding: 12px;
+    text-align: left;
+    width: 15%;
+  }
+}
