--- a/src/pages/PortfolioOverview.module.scss
+++ b/src/pages/PortfolioOverview.module.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1400px;
+  max-width: 1280px;
   width: 100%;
   padding: 40px;
   margin: 0 auto;
@@ -10,12 +10,34 @@
 
 .header {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
 }
-
 .main {
   width: 100%;
+}
+
+.wrapperHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.header h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  color: white;
+  background-color: #FF6384;
+  padding: 10px;
+  border-radius: 8px;
+  opacity: 0; 
+  animation: fadeIn 2s ease-in-out forwards; 
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
