--- a/src/index.scss
+++ b/src/index.scss
@@ -25,10 +25,23 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  font-size: 1rem; 
+}
+
+@media (max-width: 1000px) {
+  body {
+    font-size: 0.8rem; 
+  }
+}
+
+@media (max-width: 680px) {
+  body {
+    font-size: 0.7rem; 
+  }
 }
 
 h1 {
-  font-size: 2.2em;
+  font-size: 2.2rem;
   line-height: 1.1;
 }
 
