--- a/src/pages/PortfolioOverview.module.scss
+++ b/src/pages/PortfolioOverview.module.scss
@@ -41,3 +41,11 @@
     opacity: 1;
   }
 }
+
+@media (max-width: 600px) {
+  .wrapperHeader {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+  }
+}
